Content alignment fix, further styling

--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -6,11 +6,36 @@
 }
 
 .gpt4_features-heading {
-    display: flex;
     flex: 1;
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     text-align: left;
     margin-right: 5rem;   
 }
+
+.gpt4_features-heading h1 {
+    font-family: var(--font-family);
+    font-weight: 800;
+    font-size: 34px;
+    line-height: 45px;
+}
+
+.gpt4_features-heading p {
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 30px;
+    color: #ff8a71;
+    margin-top: 2rem;
+}
+
+.gpt4_features-container {
+    flex: 1.5;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
